fixed z-index for chat

--- a/frontend/src/app/components/chatbox/chatbox.component.css
+++ b/frontend/src/app/components/chatbox/chatbox.component.css
@@ -72,5 +72,5 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 *{
-  z-index: 10;
+  z-index: 8;
 }
